# ionMath

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  util.rs
src/angle/: deg.rs  mod.rs  rad.rs
src/colour/: colour_trait.rs  mod.rs  rgb.rs  rgba.old.rs  rgba.rs
src/matrix/: mat3.rs  mat4.rs  mat_trait.rs  mod.rs
src/util/: clamp.rs  lerp.rs  min_max.rs  mod.rs
src/vector/: mod.rs  vec2.rs  vec3.rs  vec4.rs  vec_trait.rs
