[package]
name        = "ion_math"
version     = "0.1.0"
authors     = ["Kyle Finlay <kyle.finlay01@gmail.com>"]
description = "A simple and fast mathematics library."
license     = "Apache-2.0"

[lib]
path       = "src/lib.rs"
crate-type = ["rlib"]

[features]
serde_serialize = ["serde", "serde_derive"]

[dependencies]
num-traits   = "*"
serde        = {version = "*", optional = true}
serde_derive = {version = "*", optional = true}
